Добавляет фильтрацию на главной странице

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <rect width="14" height="14" fill="white" />
           </clipPath>
         </defs>
-        <symbol id="icon-adventure" viewBox="0 0 36 30">
+        <symbol id="icon-adventures" viewBox="0 0 36 30">
           <g fill="none">
             <path
               fill-rule="evenodd"
@@ -70,7 +70,7 @@
             />
           </g>
         </symbol>
-        <symbol id="icon-all-quests" viewBox="0 0 26 30">
+        <symbol id="icon-all" viewBox="0 0 26 30">
           <g fill="none">
             <path
               d="M23.0455 0H13.591C11.31 0 9.45459 1.96248 9.45459 4.37502V18.125C9.45459 18.47 9.71934 18.7501 10.0455 18.7501C10.3717 18.7501 10.6364 18.47 10.6364 18.125V4.37502C10.6364 2.65254 11.9624 1.25004 13.591 1.25004H20.683C20.3119 1.77252 20.0909 2.42127 20.0909 3.12504V21.25H15.9546C15.6284 21.25 15.3636 21.53 15.3636 21.875C15.3636 22.22 15.6284 22.5 15.9546 22.5H20.6818C21.008 22.5 21.2727 22.22 21.2727 21.875V3.12504C21.2727 2.09127 22.0681 1.25004 23.0455 1.25004C23.3716 1.25004 23.6364 0.970019 23.6364 0.625019C23.6364 0.280019 23.3716 0 23.0455 0Z"
